--- a/style.css
+++ b/style.css
@@ -15,11 +15,19 @@ body {
   align-items: center;
 }
 
+section:nth-child(2n) {
+  background-color: #fff;
+}
+
 .contact {
   background-color: #f3f3f3;
   padding: 20px;
   width: 400px;
   display: flex;
+}
+
+section > img {
+  border: 3px solid lightblue;
 }
 .photo {
   width: 120px;
@@ -31,6 +39,7 @@ body {
   margin-left: 20px;
   flex-grow: 2;
 }
+
 .info p {
   font-size: 22px;
 }
@@ -46,6 +55,12 @@ body {
 .call,
 .message {
   width: 30px;
+}
+
+.call:hover,
+.message:hover {
+  transform: scale(1.3);
+  cursor: pointer;
 }
 
 /* Tady napište své styly */
